; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3WindowOffsetExpr.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3WindowOffsetExpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@IN_RENAME_OBJECT = common dso_local global i64 0, align 8
@TK_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*, i32*)* @sqlite3WindowOffsetExpr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @sqlite3WindowOffsetExpr(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i64 @sqlite3ExprIsConstant(i32* %5)
  %7 = icmp eq i64 0, %6
  br i1 %7, label %8, label %26

8:                                                ; preds = %2
  %9 = load i64, i64* @IN_RENAME_OBJECT, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @sqlite3RenameExprUnmap(%struct.TYPE_4__* %12, i32* %13)
  br label %15

15:                                               ; preds = %11, %8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @sqlite3ExprDelete(i32 %18, i32* %19)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @TK_NULL, align 4
  %25 = call i32* @sqlite3ExprAlloc(i32 %23, i32 %24, i32 0, i32 0)
  store i32* %25, i32** %4, align 8
  br label %26

26:                                               ; preds = %15, %2
  %27 = load i32*, i32** %4, align 8
  ret i32* %27
}

declare dso_local i64 @sqlite3ExprIsConstant(i32*) #1

declare dso_local i32 @sqlite3RenameExprUnmap(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @sqlite3ExprDelete(i32, i32*) #1

declare dso_local i32* @sqlite3ExprAlloc(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
